syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/vorteil/direktiv/pkg/functions/grpc";

message DeleteRegistryRequest {
	optional string namespace = 1;
	optional string name = 2;
}
